...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="abc-def" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WyQ-JB-wdH">
                                <rect key="frame" x="132" y="436" width="150" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="codeTextField"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="150" id="JgK-ZJ-u6W"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kxq-gj-tO9">
                                <rect key="frame" x="132" y="495" width="150" height="38"/>
                                <accessibility key="accessibilityConfiguration" identifier="Popup"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Popup">
                                    <fontDescription key="titleFontDescription" type="system" pointSize="20"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="popupTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mWP-aT-DPe"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R1N-gV-2rC" userLabel="codeLabel">
                                <rect key="frame" x="186" y="74" width="48" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="codeLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rga-xx-NkZ">
                                        <rect key="frame" x="130.5" y="253.5" width="70.5" height="31"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Shuffle"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Shuffle"/>
                                        <connections>
                                            <action selector="shuffleTapped:" destination="eGa-ox-ffM" eventType="touchUpInside" id="y0E-cH-bHc"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qyK-P6-xph" userLabel="Dismiss">
                                        <rect key="frame" x="128" y="292" width="75" height="31"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Dismiss"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Dismiss"/>
                                        <connections>
                                            <action selector="dismissTapped:" destination="eGa-ox-ffM" eventType="touchUpInside" id="fNd-IM-ofm"/>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="earth" translatesAutoresizingMaskIntoConstraints="NO" id="tON-VQ-4G2">
                                        <rect key="frame" x="133.5" y="10" width="64" height="64"/>
                                        <accessibility key="accessibilityConfiguration" identifier="imageIcon"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="64" id="93g-Jr-HGd"/>
                                            <constraint firstAttribute="height" constant="64" id="xXd-Lx-Cg7"/>
                                        </constraints>
                                    </imageView>
                                </subviews>
...
